# fact_check_okinawa_vote

./: .gitignore  LICENSE  README.rst  Untitled.ipynb  hoge.py  hoge.toml  noxfile.py  pyproject.toml
.github/workflows/: release.yml
data/raw/: download_log_2022-10-29.json  download_log_target.json
data/raw/2022-10-26/: 199602.xls  199603.xls  199604.xls  199605.xls  199606.xls  199607.xls  199608.xls  199609.xls  199610.xls  199611.xls  199612.xls  199701.xls  199702.xls  199703.xls  199704.xls  199705.xls  199706.xls  199707.xls  199708.xls  199709.xls  199710.xls  199711.xls  199712.xls  199801.xls  199802.xls  199803.xls  199804.xls  199805.xls  199806.xls  199807.xls  199808.xls  199809.xls  199810.xls  199811.xls  199812.xls  199901.xls  199902.xls  199903.xls  199904.xls  199905.xls  (+268 more)
docs/: conf.py  index.md  reference.md  usage.md
dustbox/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
dustbox/old/: LICENSE.txt  pyproject.toml
dustbox/old/src/fact_check_okinawa_vote_cheating/: __about__.py
dustbox/old/tests/: __init__.py
old_tests/: make_mock_data.py  old.py  test_data_downloader.py
old_tests/mock_data/: data.json
src/: Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  bee.py  grep_data.py  main.py  read_data.py  trial.py
src/fact_check_okinawa_vote_cheating/: __init__.py  __main__.py
src/old_pre/: column_maker.py  data_collecter.py  data_path.py  data_type.py
src/playground/: Untitled.ipynb  Untitled1.ipynb  downlaod_data.py
src/preprocessing/: __init__.py  aa.md  aa.txt  arrange_data.py  data_collecter.py  data_path.py  data_type.py  file_download.py  file_list_collect.py  foo.py  hoge.py  main.py  name_fixer.py  util.py
src/util/: data_path.py
tests/: __init__.py  test_data_downloader.py  test_file_download.py  test_file_list_collect.py  test_preprcessing_util.py
tests/mock_data/: response_mock_at_2022_10_25.txt
tests/mock_data_at_2022_11_02/: 199601r.xls  downlaod_log.json
